<resources>
    <string name="app_name">Yumify</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test">test</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="categories">Categories</string>
    <string name="countries">Countries</string>
    <string name="hint_countries">Select Country to show its popular meals</string>
    <string name="my_favourites">My Favourites</string>
    <string name="no_favourites_yet">No Favourites Yet</string>
    <string name="account_information">Account</string>
    <string name="my_favourites_menu_item">My Favourites</string>
    <string name="weekly_plan">Weekly Plan</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome!</string>
    <string name="username">username</string>
    <string name="login">Login</string>
    <string name="welcome_text">A place to find all the food you can possibly imagine.</string>
    <string name="sign_up">Sign up</string>
    <string name="continue_as">Continue as </string>
    <string name="guest">Guest</string>
<<<<<<< HEAD
=======
    <string name="forget_your_password">Forget your password?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="or">OR</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
<<<<<<< HEAD
>>>>>>> development
=======
    <string name="category">Category</string>
    <string name="ingredients">Ingredients</string>
    <string name="country">Country</string>
    <string name="ingredient">Ingredient</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
>>>>>>> rx-search
</resources>