<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_green"
    tools:context=".LoginFragment">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/bree_serif"
        android:text="@string/sign_up"
        android:textColor="@color/beige"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="406dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/login_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/username"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2">

        <!--this is the actual edit text which takes the input-->
        <EditText
            android:id="@+id/usernameET"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/bree_serif"
            android:gravity="bottom"
            android:includeFontPadding="false"
            android:inputType="none"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:paddingBottom="4dp"
            android:textColor="@color/main_green"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="@+id/usernameLayout"
        app:layout_constraintStart_toStartOf="@+id/usernameLayout"
        app:layout_constraintTop_toBottomOf="@+id/usernameLayout">

        <!--this is the actual edit text which takes the input-->
        <EditText
            android:id="@+id/emailET"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:background="@color/beige"
            android:fontFamily="@font/bree_serif"
            android:gravity="bottom"
            android:includeFontPadding="false"
            android:inputType="none"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:paddingBottom="4dp"
            android:textColor="@color/main_green"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="@+id/emailLayout"
        app:layout_constraintStart_toStartOf="@+id/emailLayout"
        app:layout_constraintTop_toBottomOf="@+id/emailLayout">

        <!--this is the actual edit text which takes the input-->
        <EditText
            android:id="@+id/passwordET"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:background="@color/beige"
            android:fontFamily="@font/bree_serif"
            android:gravity="bottom"
            android:includeFontPadding="false"
            android:inputType="textPassword"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:paddingBottom="4dp"
            android:textColor="@color/main_green"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmPasswordLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/confirm_password"
        app:layout_constraintEnd_toEndOf="@+id/passwordLayout"
        app:layout_constraintStart_toStartOf="@+id/passwordLayout"
        app:layout_constraintTop_toBottomOf="@+id/passwordLayout">

        <!--this is the actual edit text which takes the input-->
        <EditText
            android:id="@+id/confirmPasswordET"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:background="@color/beige"
            android:fontFamily="@font/bree_serif"
            android:gravity="bottom"
            android:includeFontPadding="false"
            android:inputType="textPassword"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:paddingBottom="4dp"
            android:textColor="@color/main_green"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/signupBtn"
        android:layout_width="273dp"
        android:layout_height="70dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/bree_serif"
        android:text="@string/sign_up"
        android:textColor="@color/beige"
        android:textSize="24sp"
        android:textStyle="bold"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="@+id/confirmPasswordLayout"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="@+id/confirmPasswordLayout"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordLayout" />

    <TextView
        android:id="@+id/orTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/bree_serif"
        android:text="OR"
        android:textColor="@color/beige"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <View
        android:id="@+id/view3"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/login_card"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/orTV" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="59dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toTopOf="@+id/view3">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/bree_serif"
            android:gravity="end"
            android:text="Continue With Google"
            android:textColor="@color/main_green"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/google_icon" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="59dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toBottomOf="@+id/view3">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/bree_serif"
            android:gravity="end"
            android:text="@string/already_have_an_account"
            android:textColor="@color/beige"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/switchToLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/bree_serif"
            android:gravity="end"
            android:text="@string/login"
            android:textColor="@color/yellow"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/googleBtn"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_centerInParent="true"
        android:alpha="0"
        app:layout_constraintBottom_toBottomOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toTopOf="@+id/view3" />

</androidx.constraintlayout.widget.ConstraintLayout>