<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".search.view.SearchFragment">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="302dp"
        android:fontFamily="@font/bree_serif"
        android:text="Search"
        android:textColor="@color/main_green"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view4"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/week_days_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <EditText
        android:id="@+id/searchET"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/week_days_card"
        android:ems="10"
        android:hint="Search"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:textColor="@color/main_green"
        android:textColorHint="@color/main_green"
        app:layout_constraintBottom_toBottomOf="@+id/view4"
        app:layout_constraintEnd_toEndOf="@+id/view4"
        app:layout_constraintStart_toStartOf="@+id/view4"
        app:layout_constraintTop_toTopOf="@+id/view4" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="22dp"
        android:layout_height="0dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/search"
        app:layout_constraintBottom_toBottomOf="@+id/view4"
        app:layout_constraintEnd_toEndOf="@+id/view4"
        app:layout_constraintTop_toTopOf="@+id/view4"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/searchChipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="@+id/view4"
        app:layout_constraintStart_toStartOf="@+id/view4"
        app:layout_constraintTop_toBottomOf="@+id/view4"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/categoryChip"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/category"
            android:textColor="@color/card_green"
            app:chipBackgroundColor="@color/main_green"
            app:checkedIconEnabled="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/ingredientsChip"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/ingredients"
            android:textColor="@color/card_green"
            app:chipBackgroundColor="@color/main_green"
            app:checkedIconEnabled="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/countryChip"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/country"
            android:textColor="@color/card_green"
            app:chipBackgroundColor="@color/main_green"
            app:checkedIconEnabled="true" />
    </com.google.android.material.chip.ChipGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchChipGroup" />
</androidx.constraintlayout.widget.ConstraintLayout>